migrating org roam: will gitignore db file in future, symlink to actual db in org file

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ auto-save-list
 tramp
 .\#*
 
+#I'm going to sym link to this guy in actuall org dir
+org-roam.db
+
 /backups/
 transient/
 bookmarks*
